# md-workflows

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
.nv/ComputeCache/: index
.nv/ComputeCache/1/f/: adbefeedfd6bdb
.nv/ComputeCache/2/a/: f7f5528e35afcc
.nv/ComputeCache/8/2/: 84cbab0873f2c6
.nv/ComputeCache/8/a/: 66db3b8389c931
.nv/ComputeCache/f/d/: 123c3f11413002
artifacts/: equil.mdp  equil_water.mdp  min_water.mdp
md_workflows/: __init__.py  cli.py  equilibrate.py  make_crystal.py  make_waterbox.py  minimize.py  param_prot.py  pdb_file_processing.py  resolvate.py  run_params_gaussian.py  solvate.py
md_workflows/workflows/: __init__.py  equilibrate.py  make_crystal.py  make_waterbox.py  mdmix.py  mdmx.py  minimize.py  param_prot.py  resolvate.py  run_params_gaussian.py  solvate.py
scripts/: clean.sh  equilibrate.sh  make_crystal.sh  make_waterbox.sh  minimize.sh  param_prot.sh  resolvate.sh  run_all.sh  run_all.sh~  run_params_gaussian.sh  run_production.sh  run_xtraj.sh  run_xtraj_first_10ns.sh  solvate.sh
tests/test_artifacts/: equil.mdp  min.mdp
tests/tests/: test_mdmx.py  test_pdb_file_processing.py
workflows/: __init__.py  make_crystal.py  make_waterbox.py  param_prot.py  run_params_gaussian.py  solvate.py
